eval dynabench R4 & EOOH on UCB & dynabench

--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +59,8 @@
    ],
    "source": [
     "# set device\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(f'using device: {device}')"
+    "# device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "# print(f'using device: {device}')"
    ]
   },
   {
@@ -182,30 +182,66 @@
     "\n",
     "# concatenate the DataFrames and save to a file\n",
     "df_ucb_w_splits = pd.concat([train_df, val_df, test_df])\n",
-    "df_ucb_w_splits.to_csv('data/ucb_hs.csv', index=False)"
+    "df_ucb_w_splits.to_csv('data/hs_ucb.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dynabench"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "label\n",
-       "0    29211\n",
-       "1    10354\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# samples: 41144, # unique ids: 41144\n",
+      "# samples per split:\n",
+      "split\n",
+      "train    32924\n",
+      "test      4120\n",
+      "val       4100\n",
+      "Name: count, dtype: int64\n",
+      "# samples per label:\n",
+      "label\n",
+      "1    22175\n",
+      "0    18969\n",
+      "Name: count, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "df_ucb_w_splits['label'].value_counts()"
+    "# load the dataset\n",
+    "df_hs_dyna = pd.read_csv('data/hs_dynabench.csv')\n",
+    "# print(f'cols in dynabench HS dataset: {df_hs_dyna.columns}')\n",
+    "# print(f'1st 5 rows:\\n{df_hs_dyna.head()}')\n",
+    "\n",
+    "# preprocess data\n",
+    "# drop extra cols\n",
+    "cols_to_keep = ['acl.id', 'text', 'label', 'type', 'level', 'split']\n",
+    "df_hs_dyna = df_hs_dyna[cols_to_keep]\n",
+    "\n",
+    "# convert label to binary\n",
+    "df_hs_dyna['label'] = (df_hs_dyna['label'] == 'hate').astype(int)\n",
+    "\n",
+    "# rename 'dev' split to 'val'\n",
+    "df_hs_dyna['split'] = df_hs_dyna['split'].replace('dev', 'val')\n",
+    "\n",
+    "# check train/val/test split\n",
+    "print(f'# samples: {len(df_hs_dyna)}, # unique ids: {len(df_hs_dyna[\"acl.id\"].unique())}')\n",
+    "print(f'# samples per split:\\n{df_hs_dyna[\"split\"].value_counts()}')\n",
+    "\n",
+    "# print value counts of labels\n",
+    "print(f'# samples per label:\\n{df_hs_dyna[\"label\"].value_counts()}')\n",
+    "\n",
+    "# save cleaned data to csv\n",
+    "# df_hs_dyna.to_csv('data/hs_dynabench_clean.csv', index=False)"
    ]
   },
   {
@@ -249,6 +285,25 @@
     "# download channel\n",
     "response = download_channel(channel['uid'])\n",
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = 'data/hs_dynabench_eooh.xlsx' # path to EOOH annot file\n",
+    "output_path = 'data/hs_dynabench_eooh_clean.csv' # path to save cleaned data\n",
+    "# clean data\n",
+    "preprocess_eooh_annots(data_path, output_path)"
    ]
   }
  ],
