--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -55,10 +55,28 @@
     "# custom\n",
     "from src.data_utils import *\n",
     "from src.models import HateSpeechClassifier\n",
-    "from src.train import train_pl\n",
+    "from src.train import train\n",
+    "from src.utils import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set torch matmul precision\n",
+    "# torch.set_float32_matmul_precision('medium')"
    ]
   },
   {
@@ -66,50 +84,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train model"
+    "## Train & eval model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.dense.weight']\n",
+      "Some weights of the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target were not used when initializing RobertaModel: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.weight', 'classifier.out_proj.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Using 16bit Automatic Mixed Precision (AMP)\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "You are using a CUDA device ('NVIDIA A100-SXM4-40GB') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "Missing logger folder: lightning_logs/ucb/facebook/roberta-hate-speech-dynabench-r4-target\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
-      "  | Name     | Type              | Params\n",
-      "-----------------------------------------------\n",
-      "0 | model    | RobertaModel      | 355 M \n",
-      "1 | fc       | Linear            | 1.0 K \n",
-      "2 | loss     | BCEWithLogitsLoss | 0     \n",
-      "3 | accuracy | BinaryAccuracy    | 0     \n",
-      "-----------------------------------------------\n",
-      "355 M     Trainable params\n",
+      "  | Name  | Type              | Params\n",
+      "--------------------------------------------\n",
+      "0 | model | RobertaModel      | 124 M \n",
+      "1 | fc    | Linear            | 769   \n",
+      "2 | loss  | BCEWithLogitsLoss | 0     \n",
+      "--------------------------------------------\n",
+      "124 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "355 M     Total params\n",
-      "1,421.443 Total estimated model params size (MB)\n"
+      "124 M     Total params\n",
+      "498.586   Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sanity Checking: 0it [00:00, ?it/s]"
+      "Epoch 0: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]        "
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved. New best score: 0.594\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 248/248 [05:02<00:00,  1.22s/it, v_num=0]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved by 0.018 >= min_delta = 0.0001. New best score: 0.576\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved by 0.001 >= min_delta = 0.0001. New best score: 0.575\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved by 0.060 >= min_delta = 0.0001. New best score: 0.515\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Metric val_loss improved by 0.080 >= min_delta = 0.0001. New best score: 0.435\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Monitored metric val_loss did not improve in the last 3 records. Best score: 0.435. Signaling Trainer to stop.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.test(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.test(ckpt_path='best')` to use the best model or `.test(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
+      "  rank_zero_warn(\n",
+      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training on device: cpu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.63it/s]\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "Runningstage.testing metric      DataLoader 0\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "        test_acc            0.7970684766769409\n",
+      "         test_f1             0.511066198348999\n",
+      "     test_precision         0.6872376203536987\n",
+      "       test_recall           0.410955548286438\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'test_acc': 0.7970684766769409,\n",
+       "  'test_precision': 0.6872376203536987,\n",
+       "  'test_recall': 0.410955548286438,\n",
+       "  'test_f1': 0.511066198348999}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,13 +270,14 @@
     "torch.cuda.empty_cache()\n",
     "\n",
     "# create data loaders\n",
-    "data_path = 'data/ucb_hs.csv' # path to data\n",
-    "bsz = 64\n",
+    "dataset = 'ucb' # dataset, either 'davidson', 'ucb' or 'dynabench'\n",
+    "data_path = 'data/hs_ucb_eooh_clean.csv' # path to data\n",
+    "bsz = 128\n",
     "max_len = 256\n",
     "num_workers = 12\n",
-    "lm_name = 'roberta-large' # lm on HF hub \n",
+    "lm_name = 'facebook/roberta-hate-speech-dynabench-r4-target' # lm on HF hub \n",
     "tokenizer = AutoTokenizer.from_pretrained(lm_name)  # use tokenizer from HF hub\n",
-    "resample = False  # resample to balance classes\n",
+    "resample = True  # resample to balance classes\n",
     "\n",
     "# create data loaders (use resampling to balance classes)\n",
     "train_loader, val_loader, test_loader = create_dataloaders(data_path, tokenizer, max_len, bsz, num_workers, resample=resample)\n",
@@ -133,10 +286,10 @@
     "model = HateSpeechClassifier(lm_name, pos_weight=1.0)\n",
     "\n",
     "# training args\n",
-    "args = {'num_epochs': 10, 'precision': '16-mixed', 'patience': 5, 'ckpt_dir': f'model_ckpts/{lm_name}','ckpt_name': 'ckpt_best', 'resume_ckpt': None}\n",
+    "args = {'num_epochs': 20, 'precision': '32', 'patience': 3, 'ckpt_dir': f'model_ckpts/{dataset}/{lm_name}','ckpt_name': 'ckpt_best', 'resume_ckpt': None, 'tb_logdir': f'{dataset}/{lm_name}'}\n",
     "\n",
     "# train\n",
-    "model, trainer = train_pl(model, train_loader, val_loader, args)\n",
+    "model, trainer = train(model, train_loader, val_loader, args)\n",
     "\n",
     "# test\n",
     "trainer.test(dataloaders=test_loader)"
@@ -144,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +306,7 @@
      "text": [
       "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.predict(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.predict(ckpt_path='best')` to use the best model or `.predict(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
       "  rank_zero_warn(\n",
-      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/unitary/toxic-bert/ckpt_best.ckpt\n"
+      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
      ]
     },
     {
@@ -161,16 +314,16 @@
      "output_type": "stream",
      "text": [
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/unitary/toxic-bert/ckpt_best.ckpt\n"
+      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 39/39 [00:01<00:00, 21.29it/s]\n",
-      "counts in test_labels: {0: 2355, 1: 124}\n",
-      "counts in test_preds: {0: 2479}\n"
+      "Predicting DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.66it/s]\n",
+      "counts in test_labels: {0: 2921, 1: 1036}\n",
+      "counts in test_preds: {0: 3340, 1: 617}\n"
      ]
     }
    ],
@@ -298,46 +451,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate annotations"
+    "### Evaluate EOOH annotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                           tweet  class  split  class_eooh\n",
-      "0  !!! RT @mayasolovely: As a...      0  train           1\n",
-      "1  !!!!! RT @mleew17: boy dat...      0  train           1\n",
-      "2  !!!!!!! RT @UrKindOfBrand ...      0  train           1\n",
-      "3  !!!!!!!!! RT @C_G_Anderson...      0  train           1\n",
-      "4  !!!!!!!!!!!!! RT @ShenikaR...      0  train           1\n",
-      "accuracy of EOOH classifier: 0.156\n"
+      "counts in labels: label\n",
+      "0    2921\n",
+      "1    1036\n",
+      "Name: count, dtype: int64 counts in preds: hate\n",
+      "0    2911\n",
+      "1    1046\n",
+      "Name: count, dtype: int64\n",
+      "acc: 0.673\n",
+      "precision: 0.378\n",
+      "recall: 0.381\n",
+      "f1: 0.379\n"
      ]
     }
    ],
    "source": [
-    "# define toxicity threshold (for hate speech)\n",
-    "df_hs = pd.read_csv('data/hs_davidson2017.csv')\n",
+    "# load EOOH annots\n",
+    "df_hs = pd.read_csv('data/hs_ucb_eooh_clean.csv')\n",
+    "# get test split\n",
+    "df_hs = df_hs[df_hs['split'] == 'test']\n",
     "\n",
-    "# preprocess raw data\n",
-    "df_hs = df_hs.loc[:, ['tweet', 'class', 'split']]\n",
-    "df_hs['class'] = df_hs['class'].apply(lambda x: 1 if x == 0 else 0)  # binary indicator of hate_speech or not\n",
+    "# get labels, preds\n",
+    "labels, preds = df_hs['label'], df_hs['hate']\n",
+    "# print value counts in labels, preds\n",
+    "print(f\"counts in labels: {labels.value_counts()} counts in preds: {preds.value_counts()}\")\n",
     "\n",
-    "# classify tweets using EOOH's classifier\n",
-    "toxic_thresh = 0.1\n",
-    "df_hs['class_eooh'] = df_hs_eooh['toxicity'].apply(lambda x: 1 if x >= toxic_thresh else 0)\n",
-    "\n",
-    "\n",
-    "# classify tweets using finetuned RoBERTa model\n",
-    "# load model\n",
-    "# make predictions on test split\n",
-    "\n",
-    "# compute accuracy for both models on test split"
+    "# compute metrics\n",
+    "metrics = ['acc', 'precision', 'recall', 'f1']  # list of metrics to compute\n",
+    "metrics_dict = compute_metrics(labels, preds, metrics)  \n",
+    "# print metrics\n",
+    "for metric in metrics:\n",
+    "    print(f\"{metric}: {metrics_dict[metric]:.3f}\")"
    ]
   }
  ],
