viz examples of preds from both models

--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "# concatenate the DataFrames and save to a file\n",
     "df_ucb_w_splits = pd.concat([train_df, val_df, test_df])\n",
-    "df_ucb_w_splits.to_csv('data/hs_ucb.csv', index=False)"
+    "df_ucb_w_splits.to_csv('data/hs_ucb_clean.csv', index=False)"
    ]
   },
   {
