--- a/hs_detection.ipynb
+++ b/hs_detection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,21 +43,17 @@
     }
    ],
    "source": [
-    "# imports\n",
-    "# standard\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import torch\n",
-    "# from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import AutoTokenizer, AutoModel\n",
-    "# custom\n",
+    "from pytorch_lightning import Trainer\n",
     "from src.data_utils import *\n",
     "from src.models import HateSpeechClassifier\n",
     "from src.train import train\n",
     "from src.utils import *\n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -88,190 +84,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target were not used when initializing RobertaModel: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.weight', 'classifier.out_proj.bias']\n",
-      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "Missing logger folder: lightning_logs/ucb/facebook/roberta-hate-speech-dynabench-r4-target\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "\n",
-      "  | Name  | Type              | Params\n",
-      "--------------------------------------------\n",
-      "0 | model | RobertaModel      | 124 M \n",
-      "1 | fc    | Linear            | 769   \n",
-      "2 | loss  | BCEWithLogitsLoss | 0     \n",
-      "--------------------------------------------\n",
-      "124 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "124 M     Total params\n",
-      "498.586   Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]        "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved. New best score: 0.594\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: 100%|██████████| 248/248 [05:02<00:00,  1.22s/it, v_num=0]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.018 >= min_delta = 0.0001. New best score: 0.576\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.001 >= min_delta = 0.0001. New best score: 0.575\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.060 >= min_delta = 0.0001. New best score: 0.515\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Metric val_loss improved by 0.080 >= min_delta = 0.0001. New best score: 0.435\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Monitored metric val_loss did not improve in the last 3 records. Best score: 0.435. Signaling Trainer to stop.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8: 100%|██████████| 248/248 [05:01<00:00,  1.22s/it, v_num=0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.test(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.test(ckpt_path='best')` to use the best model or `.test(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
-      "  rank_zero_warn(\n",
-      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training on device: cpu\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.63it/s]\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "Runningstage.testing metric      DataLoader 0\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
-      "        test_acc            0.7970684766769409\n",
-      "         test_f1             0.511066198348999\n",
-      "     test_precision         0.6872376203536987\n",
-      "       test_recall           0.410955548286438\n",
-      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'test_acc': 0.7970684766769409,\n",
-       "  'test_precision': 0.6872376203536987,\n",
-       "  'test_recall': 0.410955548286438,\n",
-       "  'test_f1': 0.511066198348999}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### Set params & create dataloaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# %%script false --no-raise-error\n",
     "# clear GPU memory\n",
     "torch.cuda.empty_cache()\n",
     "\n",
     "# create data loaders\n",
-    "dataset = 'ucb' # dataset, either 'davidson', 'ucb' or 'dynabench'\n",
-    "data_path = 'data/hs_ucb_eooh_clean.csv' # path to data\n",
+    "dataset = 'ucb' # dataset, either 'ucb' or 'dynabench'\n",
+    "data_path = f'data/hs_{dataset}_clean.csv' # path to data\n",
     "bsz = 128\n",
     "max_len = 256\n",
     "num_workers = 12\n",
@@ -280,8 +111,23 @@
     "resample = True  # resample to balance classes\n",
     "\n",
     "# create data loaders (use resampling to balance classes)\n",
-    "train_loader, val_loader, test_loader = create_dataloaders(data_path, tokenizer, max_len, bsz, num_workers, resample=resample)\n",
-    "\n",
+    "train_loader, val_loader, test_loader = create_dataloaders(data_path, tokenizer, max_len, bsz, num_workers, resample=resample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%script false --no-raise-error\n",
     "# create the model\n",
     "model = HateSpeechClassifier(lm_name, pos_weight=1.0)\n",
     "\n",
@@ -296,50 +142,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/aiahs/lib/python3.11/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:148: UserWarning: `.predict(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.predict(ckpt_path='best')` to use the best model or `.predict(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
-      "  rank_zero_warn(\n",
-      "Restoring states from the checkpoint path at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/neil/aiahs/model_ckpts/ucb/facebook/roberta-hate-speech-dynabench-r4-target/ckpt_best.ckpt\n"
+      "Some weights of the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target were not used when initializing RobertaModel: ['classifier.out_proj.bias', 'classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.weight']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at facebook/roberta-hate-speech-dynabench-r4-target and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.66it/s]\n",
+      "Predicting DataLoader 0: 100%|██████████| 31/31 [00:11<00:00,  2.65it/s]\n",
       "counts in test_labels: {0: 2921, 1: 1036}\n",
-      "counts in test_preds: {0: 3340, 1: 617}\n"
+      "counts in test_preds: {0: 3310, 1: 647}\n",
+      "confusion matrix: \n",
+      "[[2711  210]\n",
+      " [ 599  437]]\n"
      ]
     }
    ],
    "source": [
     "# get test predictions\n",
-    "test_out = trainer.predict(dataloaders=test_loader)\n",
+    "# run after training\n",
+    "# test_out = trainer.predict(dataloaders=test_loader)\n",
+    "\n",
+    "# or load from checkpoint\n",
+    "ckpt_path = f'model_ckpts/{dataset}/{lm_name}/ckpt_best.ckpt'\n",
+    "model = HateSpeechClassifier.load_from_checkpoint(ckpt_path)\n",
+    "trainer = Trainer()\n",
+    "test_out = trainer.predict(model, dataloaders=test_loader)\n",
+    "\n",
     "# stack batch preds and labels\n",
-    "test_labels = torch.cat([x[0] for x in test_out]).cpu().numpy() \n",
-    "test_preds = torch.cat([x[1] for x in test_out])\n",
+    "labels = torch.cat([x[0] for x in test_out]).cpu().numpy()\n",
+    "preds_lm = torch.cat([x[1] for x in test_out]).cpu().numpy()\n",
     "# get value counts of 0's & 1's in test_labels, test_preds\n",
-    "unique_labels, counts_labels = np.unique(test_labels, return_counts=True)\n",
-    "unique_preds, counts_preds = np.unique(test_preds, return_counts=True)\n",
+    "unique_labels, counts_labels = np.unique(labels, return_counts=True)\n",
+    "unique_preds, counts_preds = np.unique(preds_lm, return_counts=True)\n",
     "\n",
     "# print the counts\n",
     "print(f\"counts in test_labels: {dict(zip(unique_labels, counts_labels))}\")\n",
-    "print(f\"counts in test_preds: {dict(zip(unique_preds, counts_preds))}\")"
+    "print(f\"counts in test_preds: {dict(zip(unique_preds, counts_preds))}\")\n",
+    "\n",
+    "# print confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "print(f\"confusion matrix: \\n{confusion_matrix(labels, preds_lm)}\")\n",
+    "\n",
+    "# print some TNs, FPs, FNs, TPs\n",
+    "tns = test_loader.dataset.df[(labels==0) & (preds_lm==0)][['text']]\n",
+    "fps = test_loader.dataset.df[(labels==0) & (preds_lm==1)][['text']]\n",
+    "fns = test_loader.dataset.df[(labels==1) & (preds_lm==0)][['text']]\n",
+    "tps = test_loader.dataset.df[(labels==1) & (preds_lm==1)][['text']]\n",
+    "# print(f'TNs: \\n{tns.sample(2)}\\nFPs: \\n{fps.sample(2)}\\nFNs: \\n{fns.sample(2)}\\nTPs: \\n{tps.sample(2)}')\n",
+    "\n",
+    "# create dataframe w samples of each\n",
+    "num_samples = 20\n",
+    "df_tn_samples = tns.sample(num_samples).assign(label=0, pred=0)\n",
+    "df_fp_samples = fps.sample(num_samples).assign(label=0, pred=1)\n",
+    "df_fn_samples = fns.sample(num_samples).assign(label=1, pred=0)\n",
+    "df_tp_samples = tps.sample(num_samples).assign(label=1, pred=1)\n",
+    "# concat samples into single df\n",
+    "df_samples = pd.concat([df_tn_samples, df_fp_samples, df_fn_samples, df_tp_samples]).reset_index(drop=True)\n",
+    "# save to csv\n",
+    "samples_path = f'outputs/{dataset}/{lm_name}/conf_samples.tsv'\n",
+    "os.makedirs(os.path.dirname(samples_path), exist_ok=True)\n",
+    "df_samples.to_csv(samples_path, sep='\\t', index=False)"
    ]
   },
   {
@@ -456,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -473,27 +360,99 @@
       "acc: 0.673\n",
       "precision: 0.378\n",
       "recall: 0.381\n",
-      "f1: 0.379\n"
+      "f1: 0.379\n",
+      "confusion matrix: \n",
+      "[[2270  651]\n",
+      " [ 641  395]]\n"
      ]
     }
    ],
    "source": [
     "# load EOOH annots\n",
-    "df_hs = pd.read_csv('data/hs_ucb_eooh_clean.csv')\n",
+    "df_hs = pd.read_csv(f'data/hs_{dataset}_eooh_clean.csv')\n",
     "# get test split\n",
     "df_hs = df_hs[df_hs['split'] == 'test']\n",
     "\n",
     "# get labels, preds\n",
-    "labels, preds = df_hs['label'], df_hs['hate']\n",
+    "labels, preds_eooh = df_hs['label'], df_hs['hate']\n",
     "# print value counts in labels, preds\n",
-    "print(f\"counts in labels: {labels.value_counts()} counts in preds: {preds.value_counts()}\")\n",
+    "print(f\"counts in labels: {labels.value_counts()} counts in preds: {preds_eooh.value_counts()}\")\n",
     "\n",
     "# compute metrics\n",
     "metrics = ['acc', 'precision', 'recall', 'f1']  # list of metrics to compute\n",
-    "metrics_dict = compute_metrics(labels, preds, metrics)  \n",
+    "metrics_dict = compute_metrics(labels, preds_eooh, metrics)  \n",
     "# print metrics\n",
     "for metric in metrics:\n",
-    "    print(f\"{metric}: {metrics_dict[metric]:.3f}\")"
+    "    print(f\"{metric}: {metrics_dict[metric]:.3f}\")\n",
+    "    \n",
+    "# print confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "print(f\"confusion matrix: \\n{confusion_matrix(labels, preds_eooh)}\")\n",
+    "\n",
+    "# print some TNs, FPs, FNs, TPs\n",
+    "tns = df_hs[(labels==0) & (preds_eooh==0)][['text']]\n",
+    "fps = df_hs[(labels==0) & (preds_eooh==1)][['text']]\n",
+    "fns = df_hs[(labels==1) & (preds_eooh==0)][['text']]\n",
+    "tps = df_hs[(labels==1) & (preds_eooh==1)][['text']]\n",
+    "# print(f'TNs: \\n{tns.sample(2)}\\nFPs: \\n{fps.sample(2)}\\nFNs: \\n{fns.sample(2)}\\nTPs: \\n{tps.sample(2)}')\n",
+    "\n",
+    "# create dataframe w samples of each\n",
+    "num_samples = 20\n",
+    "df_tn_samples = tns.sample(num_samples).assign(label=0, pred=0)\n",
+    "df_fp_samples = fps.sample(num_samples).assign(label=0, pred=1)\n",
+    "df_fn_samples = fns.sample(num_samples).assign(label=1, pred=0)\n",
+    "df_tp_samples = tps.sample(num_samples).assign(label=1, pred=1)\n",
+    "# concat samples into single df\n",
+    "df_samples = pd.concat([df_tn_samples, df_fp_samples, df_fn_samples, df_tp_samples]).reset_index(drop=True)\n",
+    "# save to csv\n",
+    "samples_path = f'outputs/{dataset}/eooh/conf_samples.tsv'\n",
+    "os.makedirs(os.path.dirname(samples_path), exist_ok=True)\n",
+    "df_samples.to_csv(samples_path, sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare our model preds w/ EOOH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sim b/w lm preds & eooh preds: 0.690\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute similarity b/w lm preds and eooh preds\n",
+    "sim = np.sum(preds_lm == preds_eooh) / len(preds_lm)\n",
+    "print(f\"sim b/w lm preds & eooh preds: {sim:.3f}\")\n",
+    "\n",
+    "# get samples where our lm is correct but eooh is wrong\n",
+    "num_samples = 20\n",
+    "lm_correct_indices = (labels == preds_lm)\n",
+    "eooh_wrong_indices = (labels != preds_eooh)\n",
+    "\n",
+    "# TN for lm, FP for eooh\n",
+    "tn_condition = (labels == 0) & lm_correct_indices & eooh_wrong_indices\n",
+    "tn_samples = df_hs[tn_condition][['text']].sample(num_samples).assign(label=0, pred_lm=0, pred_eooh=1)\n",
+    "# TP for lm, FN for eooh\n",
+    "tp_condition = (labels == 1) & lm_correct_indices & eooh_wrong_indices\n",
+    "tp_samples = df_hs[tp_condition][['text']].sample(num_samples).assign(label=1, pred_lm=1, pred_eooh=0)\n",
+    "\n",
+    "# concat samples into single df\n",
+    "df_disagreement_samples = pd.concat([tn_samples, tp_samples]).reset_index(drop=True)\n",
+    "# save to csv\n",
+    "disagreement_samples_path = f'outputs/{dataset}/disagreement_samples.tsv'\n",
+    "os.makedirs(os.path.dirname(disagreement_samples_path), exist_ok=True)\n",
+    "df_disagreement_samples.to_csv(disagreement_samples_path, sep='\\t', index=False)"
    ]
   }
  ],
